fix table overflow

--- a/src/index.css
+++ b/src/index.css
@@ -630,7 +630,9 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
   width: 100%;
-  max-width: 100%; }
+  max-width: 100%; 
+  table-layout: fixed;
+}
 
 thead th {
   border-bottom: 2px solid #dedede; }
