--- a/src/main.css
+++ b/src/main.css
@@ -1,10 +1,10 @@
 .content-container { 
-    padding: 4em;
+    padding: 2em;
     background-color: #f1f1f1; 
 }
 
 .form-container {
-    padding: 1em 2em;
+    padding: 1em 1em;
     margin: 20px 0;
     background-color: white; 
     box-shadow: 0 2px 4px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12)!important;
